# ArtificialIntelligence-P3

./: .gitattributes  .gitignore  BNR.sh  CMakeLists.txt  Dockerfile  Project3  Project3.glade  README.md  compile.sh  gComp.sh  instructions  main.cpp
.github/workflows/: cmake.yml
include/p3/: gtkmmconfig.h  intelliapp.h  intelliappwin.h  p3.h
inputs/: attributes.txt  constraints.txt  penalty.txt  possibilistic.txt  qualitative.txt
src/: example.h  main.cpp
src/sources/: App.cpp  File.cpp  Project3.ui  Wigets.cpp  intelliapp.c  intelliapp.cpp  intelliapp.gresource.xml  intelliappwin.cpp  main.cpp  resources.c  utility.cpp
